Beginning work on admin panel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>The Hearth Effect</title>
     <link rel="stylesheet" type="text/css" href="resources/AktivGrotesk.css">
     <link rel="stylesheet" type="text/css" href="resources/global.css">
+    <link rel="stylesheet" type="text/css" href="resources/main.css">
     <script src="resources/global.js" type="application/javascript"></script>
+    <script src="resources/main.js" type="application/javascript"></script>
 </head>
 <body>
     <div id="content"></div>
