--- a/admin/editor.html
+++ b/admin/editor.html
@@ -1,6 +1,8 @@
 <div id="editor">
     <div id="menu_bar"></div>
-    <div id="code_window"></div>
+    <div id="code_window">
+        <textarea id="editor_textarea" title="editor_textarea"></textarea>
+    </div>
     <div id="preview_window"></div>
     <div id="divider"></div>
 </div>
