--- a/admin/editor.html
+++ b/admin/editor.html
@@ -1,5 +1,10 @@
 <div id="editor">
-    <div id="menu_bar"></div>
+    <div id="menu_bar">
+        <select id="action_select">
+            <option>new post</option>
+            <option>edit post</option>
+        </select>
+    </div>
     <div id="code_window">
         <textarea id="editor_textarea" title="editor_textarea"></textarea>
     </div>
