Building out admin functionality

--- a/admin/editor.html
+++ b/admin/editor.html
@@ -6,18 +6,18 @@
         </select>
         <select id="post_select" class="toggle_on_edit display_none"></select>
         <select id="month_select" class="lock_on_edit">
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="April">April</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">November</option>
-            <option value="December">December</option>
+            <option value="01">January</option>
+            <option value="02">February</option>
+            <option value="03">March</option>
+            <option value="04">April</option>
+            <option value="05">May</option>
+            <option value="06">June</option>
+            <option value="07">July</option>
+            <option value="08">August</option>
+            <option value="09">September</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
         </select>
         <select id="day_select" class="lock_on_edit">
             <option value="1">1</option>
@@ -65,6 +65,7 @@
             <option value="white_cat">White Cat</option>
         </select>
         <input id="title_input" placeholder="post title"/>
+        <button id="action_button">publish</button>
     </div>
     <div id="code_window">
         <textarea id="editor_textarea" title="editor_textarea"></textarea>
