--- a/admin/editor.html
+++ b/admin/editor.html
@@ -20,15 +20,15 @@
             <option value="12">December</option>
         </select>
         <select id="day_select" class="lock_on_edit">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
+            <option value="01">1</option>
+            <option value="02">2</option>
+            <option value="03">3</option>
+            <option value="04">4</option>
+            <option value="05">5</option>
+            <option value="06">6</option>
+            <option value="07">7</option>
+            <option value="08">8</option>
+            <option value="09">9</option>
             <option value="10">10</option>
             <option value="11">11</option>
             <option value="12">12</option>
@@ -65,6 +65,11 @@
             <option value="white_cat">White Cat</option>
         </select>
         <input id="title_input" placeholder="post title"/>
+        <input id="tags_input" placeholder="tags (space separated)"/>
+        <select id="category_select">
+            <option value="">category</option>
+            <option value="test_cases">Test Cases</option>
+        </select>
         <button id="action_button">publish</button>
     </div>
     <div id="code_window">
