Delete functionality added

--- a/admin/editor.html
+++ b/admin/editor.html
@@ -71,6 +71,7 @@
             <option value="test_cases">Test Cases</option>
         </select>
         <button id="action_button">publish</button>
+        <button id="delete_button" class="toggle_on_edit display_none">delete</button>
     </div>
     <div id="code_window">
         <textarea id="editor_textarea" title="editor_textarea"></textarea>
