--- a/admin/editor.html
+++ b/admin/editor.html
@@ -5,7 +5,7 @@
             <option value="edit_post">edit post</option>
         </select>
         <select id="post_select" class="toggle_on_edit display_none"></select>
-        <select id="month_select" class="lock_on_edit">
+        <select id="month_select">
             <option value="01">January</option>
             <option value="02">February</option>
             <option value="03">March</option>
@@ -19,7 +19,7 @@
             <option value="11">November</option>
             <option value="12">December</option>
         </select>
-        <select id="day_select" class="lock_on_edit">
+        <select id="day_select">
             <option value="01">1</option>
             <option value="02">2</option>
             <option value="03">3</option>
@@ -52,7 +52,7 @@
             <option value="30">30</option>
             <option value="31">31</option>
         </select>
-        <select id="year_select" class="lock_on_edit">
+        <select id="year_select">
             <option value="2015">2015</option>
             <option value="2016">2016</option>
             <option value="2017">2017</option>
