Uploading image functionality added

--- a/admin/editor.html
+++ b/admin/editor.html
@@ -70,6 +70,7 @@
             <option value="">category</option>
             <option value="test_cases">Test Cases</option>
         </select>
+        <button id="image_button">images</button>
         <button id="action_button">publish</button>
         <button id="delete_button" class="toggle_on_edit display_none">delete</button>
     </div>
