Nav bar and async requests

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="resources/main.js" type="application/javascript"></script>
 </head>
 <body>
+    <div id="nav"></div>
     <div id="content"></div>
     <div id="alert_container" class="transparent display_none">
         <div id="alert_window">
