--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" href="resources/admin.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../resources/AktivGrotesk.css">
     <link rel="stylesheet" type="text/css" href="../resources/global.css">
+    <link rel="stylesheet" type="text/css" href="../resources/blog.css">
     <link rel="stylesheet" type="text/css" href="lib/codemirror/codemirror.css">
     <link rel="stylesheet" type="text/css" href="lib/codemirror/lesser-dark.css">
     <script src="../resources/global.js" type="application/javascript"></script>
