--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="resources/AktivGrotesk.css">
     <link rel="stylesheet" type="text/css" href="resources/global.css">
     <link rel="stylesheet" type="text/css" href="resources/main.css">
+    <link rel="stylesheet" type="text/css" href="resources/blog.css">
     <script src="resources/global.js" type="application/javascript"></script>
     <script src="resources/main.js" type="application/javascript"></script>
 </head>
