--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,8 @@
     <script src="../resources/global.js" type="application/javascript"></script>
     <script src="resources/admin.js" type="application/javascript"></script>
     <script src="lib/codemirror/codemirror.js" type="application/javascript"></script>
+    <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="Description" content="At The Hearth Effect, we believe in the potential of ideas, like a blaze, to provide energy and warmth in our lives.">
 </head>
 <body>
     <div id="content">
