--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="resources/blog.css">
     <script src="resources/global.js" type="application/javascript"></script>
     <script src="resources/main.js" type="application/javascript"></script>
+    <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="Description" content="At The Hearth Effect, we believe in the potential of ideas, like a blaze, to provide energy and warmth in our lives.">
 </head>
 <body>
     <div id="nav"></div>
