--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../resources/AktivGrotesk.css">
     <link rel="stylesheet" type="text/css" href="../resources/global.css">
     <link rel="stylesheet" type="text/css" href="../resources/blog.css">
+    <link rel="stylesheet" type="text/css" href="../resources/mobile.css">
     <link rel="stylesheet" type="text/css" href="lib/codemirror/codemirror.css">
     <link rel="stylesheet" type="text/css" href="lib/codemirror/lesser-dark.css">
     <script src="../resources/global.js" type="application/javascript"></script>
