--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="resources/global.css">
     <link rel="stylesheet" type="text/css" href="resources/main.css">
     <link rel="stylesheet" type="text/css" href="resources/blog.css">
+    <link rel="stylesheet" type="text/css" href="resources/mobile.css">
     <script src="resources/global.js" type="application/javascript"></script>
     <script src="resources/main.js" type="application/javascript"></script>
     <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
