--- a/admin/editor.html
+++ b/admin/editor.html
@@ -1,78 +1,80 @@
 <div id="editor">
-    <div id="menu_bar">
-        <select id="action_select">
-            <option value="new_post">new post</option>
-            <option value="edit_post">edit post</option>
-        </select>
-        <select id="post_select" class="toggle_on_edit display_none"></select>
-        <select id="month_select">
-            <option value="01">January</option>
-            <option value="02">February</option>
-            <option value="03">March</option>
-            <option value="04">April</option>
-            <option value="05">May</option>
-            <option value="06">June</option>
-            <option value="07">July</option>
-            <option value="08">August</option>
-            <option value="09">September</option>
-            <option value="10">October</option>
-            <option value="11">November</option>
-            <option value="12">December</option>
-        </select>
-        <select id="day_select">
-            <option value="01">1</option>
-            <option value="02">2</option>
-            <option value="03">3</option>
-            <option value="04">4</option>
-            <option value="05">5</option>
-            <option value="06">6</option>
-            <option value="07">7</option>
-            <option value="08">8</option>
-            <option value="09">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-            <option value="31">31</option>
-        </select>
-        <select id="year_select">
-            <option value="2015">2015</option>
-            <option value="2016">2016</option>
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
-        </select>
-        <select id="author_select">
-            <option value="">author</option>
-            <option value="white_cat">White Cat</option>
-        </select>
-        <input id="title_input" placeholder="post title" autocomplete="off"/>
-        <input id="tags_input" placeholder="tags (space separated)" autocomplete="off"/>
-        <select id="category_select">
-            <option value="">category</option>
-            <option value="test_cases">Test Cases</option>
-        </select>
-        <button id="image_button">images</button>
-        <button id="action_button">publish</button>
-        <button id="delete_button" class="toggle_on_edit display_none">delete</button>
+    <div id="menu_bar_container">
+        <div id="menu_bar">
+            <select id="action_select">
+                <option value="new_post">new post</option>
+                <option value="edit_post">edit post</option>
+            </select>
+            <select id="post_select" class="toggle_on_edit display_none"></select>
+            <select id="month_select">
+                <option value="01">January</option>
+                <option value="02">February</option>
+                <option value="03">March</option>
+                <option value="04">April</option>
+                <option value="05">May</option>
+                <option value="06">June</option>
+                <option value="07">July</option>
+                <option value="08">August</option>
+                <option value="09">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+            <select id="day_select">
+                <option value="01">1</option>
+                <option value="02">2</option>
+                <option value="03">3</option>
+                <option value="04">4</option>
+                <option value="05">5</option>
+                <option value="06">6</option>
+                <option value="07">7</option>
+                <option value="08">8</option>
+                <option value="09">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+            </select>
+            <select id="year_select">
+                <option value="2015">2015</option>
+                <option value="2016">2016</option>
+                <option value="2017">2017</option>
+                <option value="2018">2018</option>
+                <option value="2019">2019</option>
+                <option value="2020">2020</option>
+            </select>
+            <select id="author_select">
+                <option value="">author</option>
+                <option value="white_cat">White Cat</option>
+            </select>
+            <input id="title_input" placeholder="post title" autocomplete="off"/>
+            <input id="tags_input" placeholder="tags (space separated)" autocomplete="off"/>
+            <select id="category_select">
+                <option value="">category</option>
+                <option value="test_cases">Test Cases</option>
+            </select>
+            <button id="image_button">images</button>
+            <button id="action_button">publish</button>
+            <button id="delete_button" class="toggle_on_edit display_none">delete</button>
+        </div>
     </div>
     <div id="code_window">
         <textarea id="editor_textarea" title="editor_textarea"></textarea>
