Post page setup + admin month bug fix

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <meta name="Description" content="At The Hearth Effect, we believe in the potential of ideas, like a blaze, to provide energy and warmth in our lives.">
 </head>
 <body>
-    <div id="nav"></div>
-    <div id="content"></div>
+    <div id="nav">
+        <input id="search_input" placeholder="search" autocomplete="off"/>
+    </div>
+    <div id="content">
+        <div class="page transparent display_none" id="search_page"></div>
+    </div>
     <div id="alert_container" class="transparent display_none">
         <div id="alert_window">
             <div id="alert_title"></div>
