--- a/admin/index.html
+++ b/admin/index.html
@@ -13,6 +13,7 @@
     <script src="../resources/global.js" type="application/javascript"></script>
     <script src="resources/admin.js" type="application/javascript"></script>
     <script src="lib/codemirror/codemirror.js" type="application/javascript"></script>
+    <script src="lib/codemirror/htmlmixed.js" type="application/javascript"></script>
     <meta media="screen and (max-width: 640px)" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
