--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <div id="nav">
-        <input id="search_input" placeholder="search" autocomplete="off"/>
+        <div id="nav_inner">
+            <input id="search_input" placeholder="search" autocomplete="off"/>
+        </div>
     </div>
     <div id="content">
         <div class="page transparent display_none" id="search_page"></div>
