--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div id="nav">
+        <div id="mobile_toggle"></div>
         <div id="nav_inner">
             <input id="search_input" placeholder="search" autocomplete="off"/>
         </div>
